--- a/surpriz.html
+++ b/surpriz.html
@@ -36,12 +36,16 @@
 
 <h1>Canım Sevgilim</h1>
 
+
 <p>
-Hayatımı güzelleştiren EN güzel şey sen oldun bunu unutma <br><br>
-iyiki benim sevgilimsin ama benim tmmı sadice<br><br>
-ciç azalmadok seviyorum seni şu ana kadarda yemin ederimki sevgim hı <br><br>
-yani hep arttı öhm (utandım biraz)
-</p>
+Hayatımı güzelleştiren <b>EN güzel şey</b> sensin <br><br>
+
+İyi ki benim sevgilimsin ama <b>sadece benim</b> tmmı?<br><br>
+
+<b>çok seviyorum seni</b> Şu ana kadar hep seni sevdim seni seveceğim<br><br>
+
+ öhm 😏(utandım biraz aşkım umarum beğenirsin mmmmwwwwuuuuahhhhhhhh)
+<
 
 <div class="kalp">💖</div>
 
