--- a/surpriz.html
+++ b/surpriz.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Sana 💖</title>
+  <title>güzelime,hayatıma,birtaneme,aşkıma,arkıma(önemli ark olmak),ve tatlış sevgilme</title>
   <style>
     body {
       background: linear-gradient(135deg, #ff758c, #ff7eb3);
@@ -32,7 +32,7 @@
 
 <body>
 
-<div class="kalp">💖</div>
+<div class="kalp">💝💘😎</div>
 
 <h1>Canım Sevgilim</h1>
 
@@ -42,12 +42,12 @@ Hayatımı güzelleştiren <b>EN güzel şey</b> sensin <br><br>
 
 İyi ki benim sevgilimsin ama <b>sadece benim</b> tmmı?<br><br>
 
-<b>çok seviyorum seni</b> Şu ana kadar hep seni sevdim seni seveceğim<br><br>
+<b>çok seviyorum senii</b>bu Lavuk (ben) seni çok seviyo<br><br>
 
- öhm 😏(utandım biraz aşkım umarum beğenirsin mmmmwwwwuuuuahhhhhhhh)
+ öhm 😏
 <
 
-<div class="kalp">💖</div>
+<div class="kalp">💓💞💝</div>
 
 </body>
 </html>
