Update1 surpriz.html

--- a/surpriz.html
+++ b/surpriz.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<div class="kalp">💝💘😎</div>
+<div class="kalp">💖</div>
 
 <h1>Canım Sevgilim</h1>
 
@@ -47,7 +47,7 @@ Hayatımı güzelleştiren <b>EN güzel şey</b> sensin <br><br>
  öhm 😏
 <
 
-<div class="kalp">💓💞💝</div>
+<div class="kalp">💖</div>
 
 </body>
 </html>
