--- a/surpriz.html
+++ b/surpriz.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>güzelime,hayatıma,birtaneme,aşkıma,arkıma(önemli ark olmak),ve tatlış sevgilme</title>
   <style>
     body {
@@ -12,11 +13,11 @@
       color: white;
     }
     h1 {
-      font-size: 32px;
-      margin-bottom: 20px;
+      font-size: 50px;
+      margin-bottom: 50px;
     }
     p {
-      font-size: 20px;
+      font-size: 50px;
       line-height: 1.7;
     }
     .kalp {
@@ -32,7 +33,7 @@
 
 <body>
 
-<div class="kalp">💖</div>
+<div class="kalp">💖💝😏</div>
 
 <h1>Canım Sevgilim</h1>
 
@@ -47,7 +48,7 @@ Hayatımı güzelleştiren <b>EN güzel şey</b> sensin <br><br>
  öhm 😏
 <
 
-<div class="kalp">💖</div>
+<div class="kalp">💖😎💘</div>
 
 </body>
 </html>
